load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["storage.go"],
    importpath = "miniboard.app/storage/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//server/storage:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["storage_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//server/storage:go_default_library",
        "//server/storage/resource:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_segmentio_ksuid//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
