load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

nodejs_binary(
    name = "rollup",
    entry_point = ":rollup.js",
    data = [
       ":rollup.js",
       "@svelte_deps//rollup",
       "@svelte_deps//svelte",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "svelte",
    entry_point = ":svelte.js",
    data = [
      ":svelte.js",
      "@svelte_deps//svelte",
    ],
    visibility = ["//visibility:public"],
)
