load("@build_bazel_rules_svelte//:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "AllArticles",
    entry_point = "AllArticles.svelte",
    deps = [
        "//web/components/article:Article",
        "//web/components/pagination:Pagination",
    ],
)
