load("//tools/svelte:defs.bzl", "svelte")

package(default_visibility = ["//visibility:public"])

svelte(
    name = "Articles",
    entry_point = "Articles.svelte",
    srcs = ["storage.js"],
    deps = [
        "//web/components/article:Article",
        "//web/components/header:Header",
        "//web/components/pagination:Pagination",
    ],
)
